--- a/src/css/Home.css
+++ b/src/css/Home.css
@@ -54,7 +54,7 @@
   }
 }
 
-.movies-grid {
+.book-grid {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
   gap: 1.5rem;
