--- a/src/css/NavBar.css
+++ b/src/css/NavBar.css
@@ -24,10 +24,11 @@
   padding: 0.5rem 1rem;
   border-radius: 4px;
   transition: background-color 0.2s;
+  color: white
 }
 
 .nav-link:hover {
-  background-color: rgba(255, 255, 255, 0.1);
+  background-color: rgba(255, 255, 255, 0.361);
 }
 
 @media (max-width: 768px) {
